# taktwerk

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  Taktwerk_Projektbrief.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/taktwerk-audio/: Cargo.toml
crates/taktwerk-audio/examples/: audio_devices.rs  loopback_flow.rs  tone.rs
crates/taktwerk-audio/src/: asrc.rs  cpal_backend.rs  lib.rs
crates/taktwerk-core/: Cargo.toml
crates/taktwerk-core/src/: clock.rs  dsp.rs  jitter.rs  lib.rs  ptp.rs  rtp.rs  sap.rs  sdp.rs
crates/taktwerk-core/src/ptp/: mod.rs  servo.rs  slave.rs  wire.rs
crates/taktwerk-daemon/: Cargo.toml
crates/taktwerk-daemon/src/: clockmon.rs  config.rs  handlers.rs  logging.rs  main.rs  monitor.rs  ravenna.rs  routing.rs  state.rs  tasks.rs
crates/taktwerk-daemon/ui/: index.html
crates/taktwerk-discovery/: Cargo.toml
crates/taktwerk-discovery/src/: lib.rs  mdns.rs  rtsp.rs
crates/taktwerk-endpoint/: Cargo.toml
crates/taktwerk-endpoint/src/: lib.rs  rx.rs  tx.rs
crates/taktwerk-net/: Cargo.toml
crates/taktwerk-net/examples/: multicast_selftest.rs  ptp_monitor.rs  sap_selftest.rs
crates/taktwerk-net/src/: lib.rs  multicast.rs  ptp.rs  receiver.rs  sap.rs  sender.rs
crates/taktwerk-router/: Cargo.toml
crates/taktwerk-router/src/: controller.rs  ids.rs  lib.rs  nmos.rs  receiver.rs  resources.rs
deploy/: com.taktwerk.daemon.plist  linux-snd-aloop.sh  taktwerk.example.toml  taktwerkd.service
docs/: clocking.md
