# Taktwerk — AES67-Node (multiplattform: Linux + macOS first-class, Windows kompiliert mit)
#
# Leitprinzip der Portabilitaet: Der gesamte Protokoll-/DSP-Kern (taktwerk-core)
# ist OS-neutral und haengt von keiner Plattform-API ab. Alles OS-spezifische
# (virtuelle Soundkarte, mDNS, PTP-Timestamping, Packaging) sitzt hinter Traits
# in eigenen Crates und wird per cfg/Feature nur auf der jeweiligen Plattform
# eingezogen. Ein Build auf einer OS zieht NIE die Backends der anderen OS herein.

[workspace]
resolver = "2"
members = [
    "crates/taktwerk-core",
    "crates/taktwerk-audio",
    "crates/taktwerk-net",
    "crates/taktwerk-endpoint",
    "crates/taktwerk-router",
    "crates/taktwerk-discovery",
    "crates/taktwerk-daemon",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = ""
authors = ["Taktwerk"]

# Gemeinsame Logging-Bausteine (permissiv, MIT). Die Laufzeit-Crates nutzen die
# `tracing`-Fassade; der Daemon richtet den Subscriber ein (stderr + Debug-Datei).
# Der reine Kern (taktwerk-core) bleibt bewusst ohne Log-Dependency.
[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
lto = true
codegen-units = 1
