[package]
name = "taktwerk-audio"
description = "OS-Naht: virtuelles Audiogeraet hinter einem Trait (Headless + per-OS-Backends)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
taktwerk-core = { path = "../taktwerk-core" }
tracing = { workspace = true }
# cpal: portable Audio-I/O (WASAPI · CoreAudio · ALSA), reines Rust, MIT/Apache.
# Optional & feature-gated, damit der NullBackend/headless-Pfad ohne OS-Audio baut.
cpal = { version = "0.15", optional = true }

# Der NullBackend (headless) braucht nichts davon und baut auf jeder Plattform.
# CpalBackend deckt echte Ein-/Ausgabegeraete ab; BlackHole/PipeWire (virtuelles
# Geraet als virtuelle Soundkarte) folgen als eigene Backends.

[features]
default = []
# Portables Echt-Geraete-Backend via cpal (Phase 1).
cpal-backend = ["dep:cpal"]
# Platzhalter fuer die virtuellen-Soundkarten-Backends.
macos-blackhole = []
linux-pipewire = []

# Die cpal-Beispiele brauchen das cpal-Feature (sonst nicht bauen).
[[example]]
name = "audio_devices"
required-features = ["cpal-backend"]

[[example]]
name = "tone"
required-features = ["cpal-backend"]

[[example]]
name = "loopback_flow"
required-features = ["cpal-backend"]

[lints]
workspace = true
