[package]
name = "taktwerk-discovery"
description = "RAVENNA-Discovery: mDNS/DNS-SD (Session finden + anbieten) + RTSP-DESCRIBE (SDP holen/liefern)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
taktwerk-core = { path = "../taktwerk-core" }
# mdns-sd: reines Rust, kein System-Bonjour nötig → portabel (Linux/macOS/Windows).
mdns-sd = "0.11"
tokio = { version = "1", features = ["net", "rt", "time", "io-util", "sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros", "time", "io-util"] }

[lints]
workspace = true
