[package]
name = "taktwerk-router"
description = "NMOS-Control-Plane: IS-04 Node-API + IS-05 Connection-API (Axum) über AES67-Streams"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
taktwerk-core = { path = "../taktwerk-core" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }

[lints]
workspace = true
